abbellito il sito

--- a/main.html
+++ b/main.html
@@ -6,19 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
-    <h1>LISTA PARTECIPANTI FESTA PAESE DEI BALOCCHI</h1>
-    <ol>
-        <li class="lista"></li>
-        <li class="lista"></li>
-        <li class="lista"></li>
-        <li class="lista"></li>
-        <li class="lista"></li>
-        <li class="lista"></li>
-    </ol>
-
+    <div class="container">
+        <div class="box">
+            <h1>LISTA PARTECIPANTI FESTA PAESE DEI BALOCCHI</h1>
+            <ol>
+                <li class="lista"></li>
+                <li class="lista"></li>
+                <li class="lista"></li>
+                <li class="lista"></li>
+                <li class="lista"></li>
+                <li class="lista"></li>
+            </ol>
+            <h3 id="msg"></h3>
+        </div>
+    </div>
     <script src="./assets/js/main.js"></script>
 </body>
 
